--- a/Wikipedia/index.html
+++ b/Wikipedia/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Wikipédia de Personagens</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/Wikipedia-logo.png" type="img">
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="img/Wikipedia-logo.png" type="image/png" />
 </head>
 <body>
     <header>
@@ -16,60 +16,66 @@
     <main>
         <section class="personagens">
             <article>
-                <img src="img/rick.webp" alt="Rick Sanchez">
+                <img src="img/rick.webp" alt="Rick Sanchez" />
                 <h2>Rick Sanchez</h2>
                 <p>Um cientista excêntrico, gênio e avô, sempre em aventuras pelo multiverso.</p>
-                <a href="https://pt.wikipedia.org/wiki/Rick_Sanchez" target="_blank">Ver na Wikipédia</a>
+                <a href="https://pt.wikipedia.org/wiki/Rick_Sanchez" target="_blank" rel="noopener noreferrer">Ver na Wikipédia</a>
             </article>
 
             <article>
-                <img src="img/Morty.webp" alt="Morty Smith">
+                <img src="img/Morty.webp" alt="Morty Smith" />
                 <h2>Morty Smith</h2>
                 <p>Neto de Rick, acompanha-o em suas aventuras perigosas e bizarras.</p>
-                <a href="https://pt.wikipedia.org/wiki/Morty_Smith" target="_blank">Ver na Wikipédia</a>
+                <a href="https://pt.wikipedia.org/wiki/Morty_Smith" target="_blank" rel="noopener noreferrer">Ver na Wikipédia</a>
             </article>
 
             <article>
-                <img src="img/summer.jpg" alt="Summer Smith">
+                <img src="img/summer.jpg" alt="Summer Smith" />
                 <h2>Summer Smith</h2>
                 <p>Irmã mais velha de Morty, inteligente e ousada.</p>
-                <a href="https://pt.wikipedia.org/wiki/Morty_Smith" target="_blank">Ver na Wikipédia</a>
+                <a href="https://pt.wikipedia.org/wiki/Morty_Smith" target="_blank" rel="noopener noreferrer">Ver na Wikipédia</a>
             </article>
+
             <article>
-                <img src="img/bob_esponja.jpg" alt="Bob Esponja">
+                <img src="img/bob_esponja.jpg" alt="Bob Esponja" />
                 <h2>Bob Esponja</h2>
                 <p>Um otimista incorrigível, alegre, inocente, enérgico e sempre disposto a ajudar.</p>
-                <a href="https://pt.wikipedia.org/wiki/SpongeBob_SquarePants" target="_blank">Ver na Wikipédia</a>
+                <a href="https://pt.wikipedia.org/wiki/SpongeBob_SquarePants" target="_blank" rel="noopener noreferrer">Ver na Wikipédia</a>
             </article>
+
             <article>
-                <img src="img/patric.jpg" alt="Patrick Estrela">
+                <img src="img/patric.jpg" alt="Patrick Estrela" />
                 <h2>Patrick Estrela</h2>
                 <p>Melhor amigo do Bob Esponja, ingênuo, preguiçoso, mas muito carismático.</p>
-                <a href="https://pt.wikipedia.org/wiki/Patrick_Estrela" target="_blank">Ver na Wikipédia</a>
+                <a href="https://pt.wikipedia.org/wiki/Patrick_Estrela" target="_blank" rel="noopener noreferrer">Ver na Wikipédia</a>
             </article>
+
             <article>
-                <img src="img/lula-moluscoo.jpg" alt="Lula Molusco">
+                <img src="img/lula-moluscoo.jpg" alt="Lula Molusco" />
                 <h2>Lula Molusco</h2>
                 <p>Vizinho e colega de trabalho do Bob Esponja no Siri Cascudo, sarcástico, impaciente e facilmente irritável, mas talentoso em arte e música.</p>
-                <a href="https://pt.wikipedia.org/wiki/Lula_Molusco" target="_blank">Ver na Wikipédia</a>
+                <a href="https://pt.wikipedia.org/wiki/Lula_Molusco" target="_blank" rel="noopener noreferrer">Ver na Wikipédia</a>
             </article>
+
             <article>
-                <img src="img/steven.jpg" alt="Steven Universo">
+                <img src="img/steven.jpg" alt="Steven Universo" />
                 <h2>Steven Universo</h2>
                 <p>O protagonista, um garoto meio humano e meio gema, cheio de coragem e amor que protege a Terra.</p>
-                <a href="https://pt.wikipedia.org/wiki/Steven_Universe"target="_blank">Ver no Wikipédia</a>
+                <a href="https://pt.wikipedia.org/wiki/Steven_Universe" target="_blank" rel="noopener noreferrer">Ver na Wikipédia</a>
             </article>
-             <article>
-                <img src="img/garnet.png" alt="Garnet">
+
+            <article>
+                <img src="img/garnet.png" alt="Garnet" />
                 <h2>Garnet</h2>
                 <p>A líder forte e calma das Crystal Gems, uma fusão poderosa de duas gemas.</p>
-                <a href="https://pt.wikipedia.org/wiki/Garnet_(Steven_Universe)"target="_blank">Ver no Wikipédia</a>
+                <a href="https://pt.wikipedia.org/wiki/Garnet_(Steven_Universe)" target="_blank" rel="noopener noreferrer">Ver na Wikipédia</a>
             </article>
-             <article>
-                <img src="img/pearl.avif" alt="Pearl">
+
+            <article>
+                <img src="img/pearl.avif" alt="Pearl" />
                 <h2>Pearl</h2>
                 <p>Inteligente, dedicada e protetora, uma das Crystal Gems mais leais a Steven e sua mãe.</p>
-                <a href="https://pt.wikipedia.org/wiki/Pearl_(Steven_Universe)"target="_blank">Ver no Wikipédia</a>
+                <a href="https://pt.wikipedia.org/wiki/Pearl_(Steven_Universe)" target="_blank" rel="noopener noreferrer">Ver na Wikipédia</a>
             </article>
         </section>
     </main>
